--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,15 +36,15 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 
+  camera: ^0.10.5+2
   video_player: ^2.7.0
-
+  get_it: ^7.6.0
   animated_text_kit: ^4.2.2
   dotted_border: ^2.0.0+3
   coordinator_layout: ^1.0.0+1
   sensors_plus: ^3.0.2
   snake: ^0.1.0
-  camera: ^0.10.5+2
-  get_it: ^7.6.0
+  gallery_saver: ^2.3.2
 
 dev_dependencies:
   flutter_test:
